--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "client": "tsx src/clientCli.ts",
-    "client:docs": "tsx src/clientCli.ts --docs"
+    "client:docs": "tsx src/clientCli.ts --docs",
+    "web": "tsx src/httpServer.ts"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.1.0",
@@ -19,6 +20,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^22.5.0",
     "tsx": "^4.16.2",
